--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"scripts": {
 		"serve": "live-server public/",
-		"build": "webpack",
+		"build:dev": "webpack",
+		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
 		"test": "jest --config=jest.config.json"
 	},
@@ -28,8 +29,10 @@
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"enzyme-to-json": "^3.3.5",
+		"extract-text-webpack-plugin": "^3.0.2",
 		"jest": "^24.8.0",
 		"live-server": "^1.2.1",
+		"mini-css-extract-plugin": "^0.7.0",
 		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
 		"normalize.css": "^8.0.1",
@@ -47,10 +50,10 @@
 		"style-loader": "^0.23.1",
 		"uuid": "^3.3.2",
 		"validator": "^10.11.0",
-		"webpack": "^4.31.0",
-		"webpack-dev-server": "^3.3.1"
+		"webpack": "^4.33.0",
+		"webpack-dev-server": "^3.7.1"
 	},
 	"devDependencies": {
-		"webpack-cli": "^3.3.2"
+		"webpack-cli": "^3.3.3"
 	}
 }
