--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ typings/
 
 # next.js build output
 .next
+
+# build generated 
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
