--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,4 @@ typings/
 .next
 
 # build generated 
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
