--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"author": "Darcio H B Bertocco",
 	"license": "MIT",
 	"scripts": {
-		"serve": "live-server public/",
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
@@ -28,12 +27,7 @@
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
 		"css-loader": "^2.1.1",
-		"enzyme": "^3.10.0",
-		"enzyme-adapter-react-16": "^1.14.0",
-		"enzyme-to-json": "^3.3.5",
 		"express": "^4.17.1",
-		"jest": "^24.8.0",
-		"live-server": "^1.2.1",
 		"mini-css-extract-plugin": "^0.7.0",
 		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
@@ -46,16 +40,20 @@
 		"react-modal": "^3.8.1",
 		"react-redux": "^7.0.3",
 		"react-router-dom": "^5.0.0",
-		"react-test-renderer": "^16.8.6",
 		"redux": "^4.0.1",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"uuid": "^3.3.2",
 		"validator": "^10.11.0",
-		"webpack": "^4.33.0",
-		"webpack-dev-server": "^3.7.1"
+		"webpack": "^4.33.0"
 	},
 	"devDependencies": {
-		"webpack-cli": "^3.3.3"
+		"enzyme": "^3.10.0",
+		"enzyme-adapter-react-16": "^1.14.0",
+		"enzyme-to-json": "^3.3.5",
+		"jest": "^24.8.0",
+		"react-test-renderer": "^16.8.6",
+		"webpack-cli": "^3.3.3",
+		"webpack-dev-server": "^3.7.1"
 	}
 }
