--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
-		"test": "jest --config=jest.config.json",
+		"test": "cross-env NODE_ENV=test jest --config=jest.config.json",
 		"start": "node server/server.js",
 		"heroku-postbuild": "yarn run build:prod"
 	},
@@ -28,6 +28,7 @@
 		"babel-preset-react": "^6.24.1",
 		"css-loader": "^2.1.1",
 		"express": "^4.17.1",
+		"firebase": "^6.1.1",
 		"mini-css-extract-plugin": "^0.7.0",
 		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
@@ -42,6 +43,8 @@
 		"react-redux": "^7.0.3",
 		"react-router-dom": "^5.0.0",
 		"redux": "^4.0.1",
+		"redux-mock-store": "^1.5.3",
+		"redux-thunk": "^2.3.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"uuid": "^3.3.2",
@@ -49,6 +52,8 @@
 		"webpack": "^4.33.0"
 	},
 	"devDependencies": {
+		"cross-env": "^5.2.0",
+		"dotenv": "^8.0.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"enzyme-to-json": "^3.3.5",
